			   XPCE ChangeLog
			   ==============

* ADDED: First version of system-dependent and hot-switchable key-bindings
  (accelerators).  Provides the important CUA (Common User Access, used
  in Windows) key-bindings by default on Windows and Emacs bindings on
  Unix systems.

* ADDED: Print and Print Selection to PceEmacs, both working on Windows and
  Unix platforms.

* ADDED: `text_image<-character_position'.

* ADDED: Make `text_image <->elevation' an instance-variable instead of a
  class-variable.

* ADDED: `screenline' argument to `editor->scroll_to'.

* ADDED: Hooks in class key_binding, preparing for better programmable
  binding tables.

* ADDED: PceEmacs: allow for deleting menu-items in sub-modes.  Used to cleanup
  the menus in the Prolog Mode.

* MODIFIED: Editor selection management, unifying the `region' and `selection',
  which is now defined by <-mark and <-caret.  This is a first step towards
  better compatibility to GNU-Emacs as well as MS-Windows editing commands.

* ADDED: Published `editor<->internal_mark', a mark for program use.

* FIXED: Throw exception of Prolog defined get-method returns a
  freed XPCE object. Used to succeed without binding the result.
  Thanks to Lourens van der Meij.

* FIXED: Windows: reading transparent GIF with > 128 colours.

* FIXED: `Image->mask' in windows now sets the masked parts to black for
  proper display.

* FIXED: writing GIF in windows version if 3*width mod 4 =\= 0 it swapped
  the blue and red colors.

* FIXED: writing XPM in Windows version.  This includes a patch to the Windows
  port of XPM which inverted transparency.  If you use the source, get the
  updated XPM library from ftp://www.swi.psy.uva.nl/xpce/Windows/lib/

VERSION 6.0.8, distributed with SWI-Prolog 5.0.8
================================================

* ADDED: writing transparent GIF files.

* FIXED: Removed some traces of pre-iso SWI-Prolog concat/3 (replaced
  with atom_concat/3).  Martin Sondergaard.
